--- a/src/cp/feedback/html/feedback.htm
+++ b/src/cp/feedback/html/feedback.htm
@@ -122,7 +122,7 @@
 			<textarea id="form-console-output" name="form-console-output" style="display:none"></textarea>
 			{% for i, v in ipairs(screenshots) do }}
 				<div id="screenshot{{ i }}" hidden>
-				<img style='display:block; width:100px;height:100px;' id='base64image{{ i }}' src='data:image/jpeg;base64, {{ v }}' />
+					<img id='base64image{{ i }}' src='data:image/jpeg;base64, {{ v }}' />
 				</div>
 				<textarea id="form-screenshot{{ i }}" name="form-screenshot{{ i }}" style="display:none"></textarea>
 			{% end }}
@@ -174,6 +174,11 @@
 					} catch(err) \{
 						console.log('The controller does not exist yet');
 					}
+				} else \{
+					document.getElementById("fullname").disabled = false;
+					document.getElementById("email").disabled = false;
+					document.getElementById("fullname").value = "Anonymous";
+					document.getElementById("email").value = "anonymous@anonymous.com";
 				}
 
 				if (document.getElementById("include-log-files").checked) \{
