--- a/src/cp/plugins/hud/html/hud.html
+++ b/src/cp/plugins/hud/html/hud.html
@@ -77,7 +77,7 @@
 
 			// Disable Right Clicking:
 			document.addEventListener("contextmenu", function(e)\{
-			    e.preventDefault();
+			    //e.preventDefault();
 			}, false);
 
 			// Something has been dropped onto our Dropbox:
@@ -103,16 +103,16 @@
 		<table>
 			<tr>
 				<th>{{ i18n("media") }}:</th>
-				<th><span class="{{media.class}}" style="color: {{media.color}};">{{media.text}}</span><th>
+				<th><span id="media" class="{{media.class}}">{{media.text}}</span><th>
 			</tr>
 			<tr>
 				<th>{{ i18n("quality") }}:</th>
-				<th><span class="{{quality.class}}" style="color: {{quality.color}};">{{quality.text}}</span><th>
+				<th><span id="quality" class="{{quality.class}}">{{quality.text}}</span><th>
 			</tr>
 
 			<tr>
 				<th>{{ i18n("backgroundRender") }}:</th>
-				<th><span class="{{backgroundRender.class}}" style="color: {{backgroundRender.color}};">{{backgroundRender.text}}</span></th>
+				<th><span id="backgroundRender" class="{{backgroundRender.class}}">{{backgroundRender.text}}</span></th>
 			</tr>
 		</table>
 		{% if hud.isDropTargetsShown() or hud.isButtonsShown() then }}
