--- a/src/cp/plugins/core/preferences/html/template.htm
+++ b/src/cp/plugins/core/preferences/html/template.htm
@@ -45,6 +45,89 @@
 				max-height: 200px;
 				overflow: auto;
 			}
+			.uiItem \{
+				padding-left:20px;
+				margin-top: 0px;
+				margin-bottom: 2px;
+				margin-right: 0px;
+				margin-left: 0px;
+			}
+
+			.plugins \{
+				table-layout: fixed;
+				width: 100%;
+				white-space: nowrap;
+
+				border: 1px solid #cccccc;
+				padding: 8px;
+				background-color: #ffffff;
+				text-align: left;
+			}
+
+			.plugins td \{
+			  white-space: nowrap;
+			  overflow: hidden;
+			  text-overflow: ellipsis;
+			}
+
+			.rowCategory \{
+				width:20%;
+				font-weight: bold;
+			}
+
+			.rowName \{
+				width:50%;
+			}
+
+			.rowStatus \{
+				width:15%;
+			}
+
+			.rowOption \{
+				width:15%;
+			}
+
+			.plugins thead, .plugins tbody tr \{
+				display:table;
+				table-layout:fixed;
+				width: calc( 100% - 1.5em );
+			}
+
+			.plugins tbody \{
+				display:block;
+				height: 250px;
+				font-weight: normal;
+				font-size: 10px;
+
+				overflow-x: hidden;
+            	overflow-y: auto;
+			}
+
+			.plugins tbody tr \{
+				display:table;
+			    width:100%;
+			    table-layout:fixed;
+			}
+
+			.plugins thead \{
+				font-weight: bold;
+				font-size: 12px;
+			}
+
+			.plugins tbody \{
+				font-weight: normal;
+				font-size: 10px;
+			}
+
+			.plugins tbody tr:nth-child(even) \{
+				background-color: #f5f5f5
+			}
+
+			.plugins tbody tr:hover \{
+				background-color: #006dd4;
+				color: white;
+			}
+
 		</style>
 		<script>
 			// Disable Right Clicking:
