--- a/src/plugins/core/welcome/manager/html/template.htm
+++ b/src/plugins/core/welcome/manager/html/template.htm
@@ -268,10 +268,10 @@
 			a \{ color: #1e6bb8; text-decoration: none; }
 			a:hover \{ text-decoration: underline; }
 
-			.btn \{ text-transform: uppercase; display: inline-block; margin-bottom: 1rem; color: rgba(255, 255, 255, 0.7); background-color: rgba(255, 255, 255, 0.08); border-color: rgba(255, 255, 255, 0.2); border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-			.btn:hover \{ color: rgba(255, 255, 255, 0.8); text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.3); }
-			.btn + .btn \{ margin-left: 1rem; }
-			.btn \{ padding: 0.6rem 0.9rem; font-size: 0.9rem; }
+			.button \{ text-transform: uppercase; display: inline-block; margin-bottom: 1rem; color: rgba(255, 255, 255, 0.7); background-color: rgba(255, 255, 255, 0.08); border-color: rgba(255, 255, 255, 0.2); border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
+			.button:hover \{ color: rgba(255, 255, 255, 0.8); text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.3); }
+			.button + .button \{ margin-left: 1rem; }
+			.button \{ padding: 0.6rem 0.9rem; font-size: 0.9rem; }
 
 			.content \{
 				color: #fff;
