--- a/src/plugins/core/preferences/manager/html/panel.htm
+++ b/src/plugins/core/preferences/manager/html/panel.htm
@@ -18,6 +18,7 @@
 				background-color: white;
 				border-radius: 3px;
 				cursor: default;
+				text-align: center;
 			}
 			.button:active \{
 				color: white;
