#404 * Updated `cp.template` to use `{{` and `{{%` to escape, and made escaping single `{` characters with `\{` optional for most cases. * Updated the HTML templates to use the new syntax.

--- a/src/plugins/finalcutpro/hud/html/hud.html
+++ b/src/plugins/finalcutpro/hud/html/hud.html
@@ -3,7 +3,7 @@
 	<head>
 		<!-- Style Sheets: -->
 		<style>
-		body \{
+		body {
 			background-color:#1f1f1f;
 			color: #bfbebb;
 			font-family: -apple-system;
@@ -11,7 +11,7 @@
 			font-weight: lighter;
 			overflow:hidden;
 		}
-		.button \{
+		.button {
 			text-align: center;
 			display:block;
 			width: 85%;
@@ -28,21 +28,21 @@
 			margin-left: auto;
 		    margin-right: auto;
 		}
-		table \{
+		table {
 			width:100%;
 			text-align:left;
 		}
-		th \{
+		th {
 			width:50%;
 		}
-		h1 \{
+		h1 {
 			font-size: 12px;
 			font-weight: bold;
 			text-align: center;
 			margin: 0px;
 			padding: 0px;
 		}
-		hr \{
+		hr {
 			height:1px;
 			border-width:0;
 			color:gray;
@@ -54,7 +54,7 @@
 			margin-right: auto;
 			border-style: inset;
 		}
-		input[type=text] \{
+		input[type=text] {
 			width: 100%;
 			padding: 5px 5px;
 			margin: 8px 0;
@@ -65,10 +65,10 @@
 			color: white;
 			text-align:center;
 		}
-		.good \{
+		.good {
 			color: #3f9253;
 		}
-		.bad \{
+		.bad {
 			color: #d1393e;
 		}
 		</style>
@@ -77,18 +77,18 @@
 		<script>
 
 			// Disable Right Clicking:
-			document.addEventListener("contextmenu", function(e)\{
+			document.addEventListener("contextmenu", function(e){
 			    e.preventDefault();
 			}, false);
 
 			// Something has been dropped onto our Dropbox:
-			function dropboxAction() \{
+			function dropboxAction() {
 				var x = document.getElementById("dropbox");
 				var dropboxValue = x.value;
 
-				try \{
+				try {
 					webkit.messageHandlers.hud.postMessage(dropboxValue);
-				} catch(err) \{
+				} catch(err) {
 					console.log('The controller does not exist yet');
 				}
 
