--- a/src/plugins/core/preferences/manager/html/panel.htm
+++ b/src/plugins/core/preferences/manager/html/panel.htm
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		 <style>
-			body \{
+			body {
 				background-color: #ececec;
 				font-family: -apple-system;
 				font-size: 13px;
 				overflow:hidden;
 			}
-			.button \{
+			.button {
 				text-decoration: none;
 				color: black;
 				padding: 2px 18px;
@@ -20,21 +20,21 @@
 				cursor: default;
 				text-align: center;
 			}
-			.button:active \{
+			.button:active {
 				color: white;
 				border-color:#1262fb;
 				background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
 			}
-			.button.selected \{
+			.button.selected {
 				color: white;
 				border-color:#1262fb;
 				background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
 			}
-			.button.disabled \{
+			.button.disabled {
 				color: #999!important;
 				background-image: -webkit-linear-gradient(#fbf8f8 0%, #f0f0f0 30%, #e3e3e3 45%, #d7d7d7 60%, #cbc9c9 100%);
 			}
-			.textarea \{
+			.textarea {
 				-webkit-box-sizing: border-box;
 				padding: 4px 4px;
 				margin: 10px 0px;
@@ -46,7 +46,7 @@
 				max-height: 200px;
 				overflow: auto;
 			}
-			.uiItem \{
+			.uiItem {
 				padding-left:20px;
 				margin-top: 0px;
 				margin-bottom: 2px;
@@ -57,7 +57,7 @@
 		<script>
 			// Disable Right Clicking:
 			/*
-			document.addEventListener("contextmenu", function(e)\{
+			document.addEventListener("contextmenu", function(e){
 			    e.preventDefault();
 			}, false);
 			*/
