--- a/src/plugins/core/preferences/panels/shortcuts/html/panel.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/panel.html
@@ -26,11 +26,19 @@
 	}
 
 	.rowModifier {
-		width: 25%;
+		width: 18%;
+	}
+	
+	.rowModifier select {
+		width: 100%;
 	}
 
 	.rowShortcut {
-		width: 20%;
+		width: 27%;
+	}
+	
+	.rowShortcut select {
+		width: 100%;
 	}
 
 	.shortcuts thead, .shortcuts tbody tr {
