--- a/src/plugins/core/preferences/panels/shortcuts/html/panel.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/panel.html
@@ -33,11 +33,11 @@
 		width: 100%;
 	}
 
-	.rowShortcut {
+	.rowKeyCode {
 		width: 27%;
 	}
 	
-	.rowShortcut select {
+	.rowKeyCode select {
 		width: 100%;
 	}
 
@@ -81,20 +81,25 @@
 		background-color: #006dd4;
 		color: white;
 	}
+	
+	.buttons {
+		text-align: right;
+	}
 </style>
-<h3>{{ i18n("customiseShortcuts", {default = "Customise Shortcuts:"}) }}</h3>
+<h3>{{ i18n "customiseShortcuts" }}</h3>
 <div id="customiseShortcuts" {{ customShortcutsEnabled }}>
 	<table class="shortcuts">
 		<thead>
 			<tr>
-				<th class="rowGroup">Group</th>
-				<th class="rowLabel">Label</th>
-				<th class="rowModifier">Modifier</th>
-				<th class="rowShortcut">Shortcut</th>
+				<th class="rowGroup">{{ i18n "shortcutsGroup" }}</th>
+				<th class="rowLabel">{{ i18n "shortcutsLabel" }}</th>
+				<th class="rowModifier">{{ i18n "shortcutsModifier" }}</th>
+				<th class="rowKeyCode">{{ i18n "shortcutsKey" }}</th>
 			</tr>
 		</thead>
 		<tbody>
 		{(html/rows.html, context)}
 		</tbody>
 	</table>
+	<div class="buttons">{* generate.button({title = i18n("resetShortcuts")}, "resetShortcuts") *}</div>
 </div>
