--- a/src/plugins/core/preferences/panels/shortcuts/html/panel.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/panel.html
@@ -13,7 +13,7 @@
 		background-color: #ffffff;
 		text-align: left;
 	}
-	
+
 	.shortcuts td {
 	  white-space: nowrap;
 	  overflow: hidden;
@@ -32,7 +32,7 @@
 	.rowModifier {
 		width: 18%;
 	}
-	
+
 	.rowModifier select {
 		width: 100%;
 	}
@@ -40,7 +40,7 @@
 	.rowKeyCode {
 		width: 27%;
 	}
-	
+
 	.rowKeyCode select {
 		width: 100%;
 	}
@@ -85,8 +85,9 @@
 		background-color: #006dd4;
 		color: white;
 	}
-	
+
 	.buttons {
+		padding-top: 10px;
 		text-align: right;
 	}
 </style>
