#434 * Updated preference panels * Added `cp.web.html` and `cp.web.ui` * The ‘Shortcuts’ panel looks ok, but is currently not actually functioning. Need to fix the drop-down boxes for modifier/key codes.

--- a/src/plugins/core/preferences/panels/shortcuts/html/rows.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/rows.html
@@ -27,16 +27,19 @@
 				var modifiers = document.getElementById("modifiers_{{ item.shortcutId }}");
 				var keyCode = document.getElementById("keyCode_{{ item.shortcutId }}");
 				var handler = function () {
-					console.log("modifiers.id: " + modifiers.id)
-					console.log("modifiers.value: " + modifiers.value)
+					console.log("modifiers.id: " + modifiers.id);
+					console.log("modifiers.value: " + modifiers.value);
+					console.log("keyCode.value: " + keyCode.value);
 					try {
 						var result = {
-							action: "updateShortcut",
-							group: "{{ item.groupId }}",
-							command: "{{ item.command:id() }}",
-							shortcut: {{ (item.shortcutIndex or 0) }},
-							modifiers: modifiers.value,
-							keyCode: keyCode.value,
+							id: {{ "updateShortcut" }},
+							params: {
+								group: "{{ item.groupId }}",
+								command: "{{ item.command:id() }}",
+								shortcut: {{ (item.shortcutIndex or 0) }},
+								modifiers: modifiers.value,
+								keyCode: keyCode.value,
+							}
 						}
 						webkit.messageHandlers.{{ context.webviewLabel }}.postMessage(result);
 					} catch(err) {
