--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -53,6 +53,10 @@
 				margin-right: 0px;
 				margin-left: 0px;
 			}
+			
+			h3.uiItem {
+				padding-top: 6pt;
+			}
 		</style>
 		<script>
 			// Disable Right Clicking:
@@ -66,7 +70,7 @@
 	<body>
 {%	for i, panel in ipairs(panels) do %}
 		<div id="{{ panel.id }}" style="display: {{ panel.id == highestPriorityID and "block" or "none" }};">
-			{* panel.contentFn() *}
+			{* panel:generateContent() *}
 		</div>
 {%	end %}
 	</body>
