--- a/src/plugins/core/preferences/panels/plugins/html/panel.html
+++ b/src/plugins/core/preferences/panels/plugins/html/panel.html
@@ -36,10 +36,11 @@
 	}
 
 	.plugins {
+		float: left;
+		margin-left: 20px;
 		table-layout: fixed;
-		width: 100%;
+		width: 92%;
 		white-space: nowrap;
-
 		border: 1px solid #cccccc;
 		padding: 8px;
 		background-color: #ffffff;
@@ -142,7 +143,7 @@
 		display: table-row-group;
 	}
 </style>
-<h3>{{ i18n "pluginsManagerLabel" }}:</h3>
+<h3 class="uiItem">{{ i18n "pluginsManagerLabel" }}</h3>
 <table class="plugins">
 	<thead>
 		<tr>
