--- a/src/plugins/core/preferences/panels/plugins/html/panel.html
+++ b/src/plugins/core/preferences/panels/plugins/html/panel.html
@@ -159,7 +159,7 @@
 			<td class="rowCategory">{{ plugin.currentCategory }}</td>
 			<td class="rowName">{* plugin.shortName *}</td>
 			<td class="rowStatus">{* plugin.status *}</td>
-			<td class="rowOption">{% if plugin.action then %}<a id="{{ plugin.id }}" data-action="{{ plugin.action }}" href="#">{{ plugin.actionLabel }}</a>{% else %}&nbsp;{% end %}</td>
+			<td class="rowOption">{% if plugin.action then %}<a id="{{ plugin.id }}" data-action="{{ plugin.action }}" href="#">{{ plugin.actionLabel }}</a>{% else %}<i>{{ i18n("pluginRequired") }}</i>{% end %}</td>
 		</tr>
 	{% end %}
 	</tbody>
