#546 * Moved `core.welcome.manager` to `core.setup`.

--- a/src/plugins/core/setup/html/template.html
+++ b/src/plugins/core/setup/html/template.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			{["css/normalize.7.0.0.css"]}
-			{["css/welcome.css"]}
+			{["css/setup.css"]}
 		</style>
 		{% if not debugMode then %}
 		<script>
