--- a/src/plugins/core/preferences/panels/shortcuts/html/panel.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/panel.html
@@ -1,115 +1,5 @@
 <style>
-	#customiseShortcuts.disabled {
-		pointer-events: none; opacity: 0.4;
-	}
-
-	.shortcuts {
-		float: left;
-		margin-left: 20px;
-		table-layout: fixed;
-		width: 92%;
-		white-space: nowrap;
-		border: 1px solid #cccccc;
-		padding: 8px;
-		background-color: #ffffff;
-		text-align: left;
-	}
-
-	.shortcuts td {
-	  white-space: nowrap;
-	  overflow: hidden;
-	  text-overflow: ellipsis;
-	}
-
-	.rowGroup {
-		width:10%;
-		font-weight: bold;
-	}
-
-	.rowLabel {
-		width: 45%;
-	}
-
-	.rowModifier {
-		width: 18%;
-	}
-
-	.rowModifier select {
-		width: 100%;
-	}
-
-	.rowKeyCode {
-		width: 27%;
-	}
-
-	.rowKeyCode select {
-		width: 100%;
-	}
-
-	.shortcuts thead, .shortcuts tbody tr {
-		display: table;
-		table-layout: fixed;
-		width: calc( 100% - 1.5em );
-	}
-
-	.shortcuts tbody {
-		display:block;
-		height: 250px;
-		font-weight: normal;
-		font-size: 10px;
-
-		overflow-x: hidden;
-		overflow-y: auto;
-	}
-
-	.shortcuts tbody tr {
-		display: table;
-		width:100%;
-		table-layout:fixed;
-	}
-
-	.shortcuts thead {
-		font-weight: bold;
-		font-size: 12px;
-	}
-
-	.shortcuts tbody {
-		font-weight: normal;
-		font-size: 10px;
-	}
-
-	.shortcuts tbody tr:nth-child(even) {
-		background-color: #f5f5f5
-	}
-
-	.shortcuts tbody tr:hover {
-		background-color: #006dd4;
-		color: white;
-	}
-
-	.resetShortcuts {
-		margin: 10px 10px !important;
-		text-align: right;
-	}
-
-	.buttonDisabled {
-		pointer-events:none;
-		opacity: 0.4;
-	}
-
-	.shortcutsControl {
-		padding-top: 0px;
-		padding-bottom: 3pt;
-		padding-left: 20px;
-		margin-top: 0px;
-		margin-bottom: 2px;
-		margin-right: 0px;
-		margin-left: 0px;
-		height: 20px;
-	}
-	#shortcutController {
-		font-weight: bold;
-	}
+	{["css/shortcuts.css"]}
 </style>
 <h3 class="uiItem">{{ i18n "customiseShortcuts" }}</h3>
 <p class="shortcutsControl">{{ i18n "shortcutsControl" }} <span id="shortcutController">{% if shortcutsEnabled then %}{{ i18n "appName" }}{% else %}{{ i18n("finalCutPro")}}{% end %}</span>.</p>
