#546 * Initial version of having a custom Shortcuts Editor for FCPX.

--- a/src/plugins/core/preferences/panels/shortcuts/html/controls.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/controls.html
@@ -1,6 +1,12 @@
 <div id="shortcutsGroupControls" class="uiItem">
 {%	for id,group in pairs(groups) do %}
 	<div id="shortcutsGroup_{{ id }}" class="shortcutsGroup{{ id == defaultGroup and ' selected' or '' }}">
+	{%
+		local editor = groupEditor(id)
+		if editor then
+	%}
+			{* editor(group) *}
+	{%	else %}
 		<table class="shortcuts">
 			<thead>
 				<tr>
@@ -13,6 +19,9 @@
 			{(html/rows.html, _.extend({group = group}, context))}
 			</tbody>
 		</table>
+	{%
+		end --if
+	%}
 	</div>
 {% end %}
 </div>
