#546 * Fixed some issues with Preferences size and position when reopening. * Now centres correctly on whichever is the ‘main screen’, when opened for the first time, or if the window was off-screen when last opened. * Uses the ‘max panel height’ to determine the initial position of the screen, rather than the default height.

--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 {%	for i, panel in ipairs(panels) do %}
-		<div id="{{ panel.id }}" style="display: {{ panel.id == highestPriorityID and "block" or "none" }};">
+		<div id="{{ panel.id }}" style="display: {{ panel.id == currentPanelID and "block" or "none" }};">
 			{* panel:generateContent() *}
 		</div>
 {%	end %}
