Implement Dark Mode

--- a/src/plugins/core/watchfolders/manager/html/panels.html
+++ b/src/plugins/core/watchfolders/manager/html/panels.html
@@ -3,19 +3,23 @@
 	<head>
 		<style>
 			body {
-				background-color: #ececec;
+				background-color: #1f1f1f;
 				font-family: -apple-system;
 				font-size: 13px;
 				overflow:hidden;
+				color: #999999;
+			}
+			a {
+				color: #999999;
 			}
 			.button {
+				background-color: #4a4a4a;
+				color: #bfbfbc;
 				text-decoration: none;
-				color: black;
 				padding: 2px 18px;
-				border:1px solid #c7c7c7;
+				border:0.5px solid black;
 				margin: 2px 2px;
 				display: inline-block;
-				background-color: white;
 				border-radius: 3px;
 				cursor: default;
 				text-align: center;
@@ -38,7 +42,7 @@
 				-webkit-box-sizing: border-box;
 				padding: 4px 4px;
 				margin: 10px 0px;
-				background-color: white;
+				background-color: #161616;
 				border:1px solid #c5c5c5;
 				width: 99%;
 				height: 200px;
