--- a/src/extensions/cp/feedback/html/feedback.htm
+++ b/src/extensions/cp/feedback/html/feedback.htm
@@ -3,46 +3,52 @@
   <head>
 	 <style>
 	 	body {
-	 		background-color: #ececec;
+	 		background-color: #1f1f1f;
 	 		font-family: -apple-system;
 	 		font-size: 13px;
+	 		color: #999999;
 	 	}
 		.button {
+			background-color: #4a4a4a;
+			color: #bfbfbc;
 			text-decoration: none;
-			color: black;
 			padding: 2px 18px;
-			border:1px solid #c7c7c7;
+			border:0.5px solid black;
 			margin: 2px 2px;
 			display: inline-block;
-			background-color: white;
 			border-radius: 3px;
 			cursor: default;
+			text-align: center;
 		}
 		.button:active {
 			color: white;
-		 	border-color:#1262fb;
-		 	background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
+			border-color:#1262fb;
+			background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
 		}
 		.button.selected {
 			color: white;
-		 	border-color:#1262fb;
-		 	background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
+			border-color:#1262fb;
+			background-image:-webkit-linear-gradient(#6fb4f7, #1981fb);
 		}
 		.button.disabled {
 			color: #999!important;
 			background-image: -webkit-linear-gradient(#fbf8f8 0%, #f0f0f0 30%, #e3e3e3 45%, #d7d7d7 60%, #cbc9c9 100%);
 		}
 		.textarea {
-		 	-webkit-box-sizing: border-box;
-		 	padding: 4px 4px;
+			-webkit-box-sizing: border-box;
+			padding: 4px 4px;
 			margin: 10px 0px;
-			background-color: white;
+			background-color: #161616;
 			border:1px solid #c5c5c5;
 			width: 99%;
 			height: 200px;
 			outline: 0px solid transparent;
-		    max-height: 200px;
-		    overflow: auto;
+			max-height: 200px;
+			overflow: auto;
+		}
+		input {
+			background-color: #161616 !important;
+			color: #999999 !important;
 		}
 		.main-form {
 			width: 350px;
