--- a/src/plugins/core/preferences/panels/shortcuts/html/rows.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/rows.html
@@ -18,7 +18,7 @@
 				</td>
 				<td class="rowKeyCode">
 					<select id="keyCode_{{ cmd:id() }}">
-						<option></option>
+						<option value="none">{{ i18n("none", {default = "None"}) }}</option>
 						{* keyCodeOptions(shortcut) *}
 					</select>
 				</td>
